--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <center>
-            <1>Página principal</1>
+            <h1>Página principal</h1>
         </center>
     </div>
 </body>
