--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </nav>
 
     <div class="container">
+      
       <center>
         <section class="text-gray-700 body-font" style="background-color:darkcyan; color: white;">
           <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
@@ -64,33 +65,9 @@
                 Heirloom echo park mlkshk tote bag selvage hot chicken
                 authentic tumeric truffaut hexagon try-hard chambray.
               </p>
-            </div>
+            </div></div>
         </section>
-
         <br>
-
-        <table class="table">
-          <tr>
-            <td>
-              <center>
-                <h2>¿Eres <u>vendedor</u> de esta máquina? ¡Contáctanos!</h2>
-                <!-- FORMULARIO VENDEDOR -->
-                <iframe src="https://msgsndr.com/widget/form/dQkSqCzkQD3erygiR8AN" style="border:none;width:100%;"
-                  scrolling="no" id="dQkSqCzkQD3erygiR8AN"></iframe>
-                <script src="https://msgsndr.com/js/form_embed.js"></script>
-              </center>
-            </td>
-            <td>
-              <center>
-                <h2>¿Buscas <u>comprar</u> esta máquina? ¡Contáctanos!</h2>
-                <!-- FORMULARIO COMPRADOR -->
-                <iframe src="https://msgsndr.com/widget/form/KKLtyPZC8XCfttO0DafD" style="border:none;width:100%;"
-                  scrolling="no" id="KKLtyPZC8XCfttO0DafD"></iframe>
-                <script src="https://msgsndr.com/js/form_embed.js"></script>
-              </center>
-            </td>
-          </tr>
-        </table>
       </center>
     </div>
   </div>
